--- a/01_Cuda/index.html
+++ b/01_Cuda/index.html
@@ -21,7 +21,7 @@
             <a href="#"><img alt="Logo" src="./assets/img/logo.png" class="header__logo" /></a>
 
             <ul class="header__nav">
-                <li><a href="#">HOME</a></li>
+                <li><a class="header__link--active" href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">WORK</a></li>
                 <li><a href="#">BLOG</a></li>
@@ -82,7 +82,7 @@
                 <ul class="team__list">
                     <li class="team__item">
                         <div class="team__avatar"></div>
-                        <span class="team__name">ANNE HETHAWAY</span> <br />
+                        <h4 class="team__name">ANNE HETHAWAY</h4> <br />
                         <span class="team__position">CEO / Marketing Guru</span>
                         <p class="team__description">Lorem ipsum dolor sit amet, 
                             consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
@@ -96,11 +96,11 @@
 
                     <li class="team__item">
                         <div class="team__avatar"></div>
-                        <span class="team__name">KATE UPTON</span> <br />
+                        <h4 class="team__name">KATE UPTON</h4> <br />
                         <span class="team__position">Creative Director</span>
                         <p class="team__description">Duis aute irure dolor in in voluptate velit esse cillum dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proident.</p>
                         <div class="team__socials">
-                            <div class="social-sprite social-sprite-Twitter-icon"></div>
+                            <div class="social-sprite social-sprite-Twitter-icon social-sprite--active"></div>
                             <div class="social-sprite social-sprite-LinkedIn-icon"></div>
                             <div class="social-sprite social-sprite-Mail-icon"></div>
                         </div>
@@ -108,9 +108,9 @@
 
                     <li class="team__item">
                         <div class="team__avatar"></div>
-                        <span class="team__name">OLIVIA WILDE</span> <br />
+                        <h4 class="team__name">OLIVIA WILDE</h4> <br />
                         <span class="team__position">Lead Designer</span>
-                        <p class="team__description">Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem nesciunt.</p>
+                        <p class="team__description">Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione nesciunt.</p>
                         <div class="team__socials">
                             <div class="social-sprite social-sprite-Fb-icon"></div>
                             <div class="social-sprite social-sprite-Twitter-icon"></div>
@@ -121,7 +121,7 @@
 
                     <li class="team__item">
                         <div class="team__avatar"></div>
-                        <span class="team__name">ASHLEY GREENE</span> <br />
+                        <h4 class="team__name">ASHLEY GREENE</h4> <br />
                         <span class="team__position">SEO / Developer</span>
                         <p class="team__description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         <div class="team__socials">
@@ -143,28 +143,56 @@
                     tempor incididunt ut labore et dolore magna aliqua.</p>
                 <ul class="skills__list">
                     <li class="skills__item">
-                        <div class="progress--circle progress--90">
-                            <div class="progress__number">90%</div>
+                        <div class="progress">
+                            <div class="pie-wrapper progress-90 style-2">
+                                <span class="label">90<span class="smaller">%</span></span>
+                                <div class="pie">
+                                    <div class="left-side half-circle"></div>
+                                    <div class="right-side half-circle"></div>
+                                </div>
+                                <div class="shadow"></div>
+                            </div>
                         </div>
-                        <span>WEB DESIGN</span>
+                        <h4>WEB DESIGN</h4>
                     </li>
                     <li class="skills__item">
-                        <div class="progress--circle progress--75">
-                            <div class="progress__number">75%</div>
+                        <div class="progress">
+                            <div class="pie-wrapper progress-75 style-2">
+                                <span class="label">75<span class="smaller">%</span></span>
+                                <div class="pie">
+                                    <div class="left-side half-circle"></div>
+                                    <div class="right-side half-circle"></div>
+                                </div>
+                                <div class="shadow"></div>
+                            </div>
                         </div>
-                        <span>HTML / CSS</span>
+                        <h4>HTML / CSS</h4>
                     </li>
                     <li class="skills__item">
-                        <div class="progress--circle progress--70">
-                            <div class="progress__number">70%</div>
+                        <div class="progress">
+                            <div class="pie-wrapper progress-70 style-2">
+                                <span class="label">70<span class="smaller">%</span></span>
+                                <div class="pie">
+                                    <div class="left-side half-circle"></div>
+                                    <div class="right-side half-circle"></div>
+                                </div>
+                                <div class="shadow"></div>
+                            </div>
                         </div>
-                        <span>GRAPHIC DESIGN</span>
+                        <h4>GRAPHIC DESIGN</h4>
                     </li>
                     <li class="skills__item">
-                        <div class="progress--circle progress--85">
-                            <div class="progress__number">85%</div>
+                        <div class="progress">
+                            <div class="pie-wrapper progress-85 style-2">
+                                <span class="label">85<span class="smaller">%</span></span>
+                                <div class="pie">
+                                    <div class="left-side half-circle"></div>
+                                    <div class="right-side half-circle"></div>
+                                </div>
+                                <div class="shadow"></div>
+                            </div>
                         </div>
-                        <span>UI / UX</span>
+                        <h4>UI / UX</h4>
                     </li>
                 </ul>
             </div>
@@ -174,10 +202,10 @@
             <div class="portfolio__block__container">
                 <h2 class="block__title">OUR PORTFOLIO</h2>
                 <div class="block__decoLine"></div>
-                <p class="block__description">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet
+                <p class="block__description">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet <br />
                     consectetur, adipisci velit, sed quia non numquam.</p>
                 <ul class="portfolio__nav">
-                    <li><a href="#">ALL</a></li>
+                    <li><a class="portfolio__nav--active" href="#">ALL</a></li>
                     <li><a href="#">WEB</a></li>
                     <li><a href="#">APPS</a></li>
                     <li><a href="#">ICONS</a></li>
@@ -214,7 +242,7 @@
                 <ul class="reviews__items">
                     <li>
                         <div class="reviews__avatar"></div>
-                        <div>
+                        <div class="reviews__info">
                             <p class="reviews__article">“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                             <span class="reviews__name">CHANEL IMAN</span>
                             <span class="reviews__position">CEO of Pinterest</span>
@@ -222,7 +250,7 @@
                     </li>
                     <li>
                         <div class="reviews__avatar"></div>
-                        <div>
+                        <div class="reviews__info">
                             <p class="reviews__article">“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                             <span class="reviews__name">CHANEL IMAN</span>
                             <span class="reviews__position">CEO of Pinterest</span>
@@ -230,7 +258,7 @@
                     </li>
                     <li>
                         <div class="reviews__avatar"></div>
-                        <div>
+                        <div class="reviews__info">
                             <p class="reviews__article">“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                             <span class="reviews__name">CHANEL IMAN</span>
                             <span class="reviews__position">CEO of Pinterest</span>
@@ -238,7 +266,7 @@
                     </li>
                     <li>
                         <div class="reviews__avatar"></div>
-                        <div>
+                        <div class="reviews__info">
                             <p class="reviews__article">“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                             <span class="reviews__name">CHANEL IMAN</span>
                             <span class="reviews__position">CEO of Pinterest</span>
@@ -268,7 +296,7 @@
     <footer>
         <ul>
             <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a class="footer__nav--active" href="#">Twitter</a></li>
             <li><a href="#">Google+</a></li>
             <li><a href="#">LinkedIn</a></li>
             <li><a href="#">Behance</a></li>
