--- a/02_Openlogic/index.html
+++ b/02_Openlogic/index.html
@@ -15,7 +15,7 @@
         <div class="header__nav">
             <img src="assets/img/logo.png" class="header__logo" alt="Header logo" />
             <nav>
-                <ul>
+                <ul class="nav--first">
                     <li><a href="javascript:void(0);">Home</a></li>
                     <li><a href="javascript:void(0);">New</a></li>
                     <li><a href="javascript:void(0);">Gallery</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="javascript:void(0);" class="header__link--active">Layouts</a>
                         <ul class="nav--second">
                             <li><a href="javascript:void(0);" class="header__link--second--active">Headers</a>
-                                <ul>
+                                <ul class="nav--third">
                                     <li><a href="javascript:void(0);">No headers</a></li>
                                     <li><a href="javascript:void(0);">Only bread crumbs</a></li>
                                     <li><a href="javascript:void(0);" class="header__link--second--active">Auromatic</a></li>
@@ -42,18 +42,30 @@
                 </ul>
             </nav>
         </div>
-
-        <div class="header__banner">
-            <img src="assets/img/header_pic.png" class="header__banner__image" alt="Banner image">
-            <article>
-                <h3>About To Lead Huge Spotify Funding</h3>
-                <p>European streaming music startup Spotify is in the process of closing a very large financing, say multiple sources. DST, the venture firm that has backed Facebook, Groupon and Zynga, is said to be leading the deal, which values Spotify.</p>
-            </article>
-        </div>
     </header>
 
     
     <main class="main" role="main">
+        <div class="banner">
+            <img src="assets/img/header_pic.png" class="header__banner__image" alt="Banner image">
+            <article>
+                <h3>About To Lead Huge Spotify Funding</h3>
+                <p>European streaming music startup Spotify is in the process of closing a very large financing, say multiple sources. DST, the venture firm that has backed Facebook, Groupon and Zynga, is said to be leading the deal, which values Spotify.</p>
+                <ul>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <img src="assets/img/banner__arrow__left.png" />
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="javascript:void(0)">
+                            <img src="assets/img/banner__arrow__right.png" />
+                        </a>
+                    </li>
+                </ul>
+            </article>
+        </div>
         <aside>
             <nav>
                 <div>
@@ -101,24 +113,24 @@
                 </div>
                 <div class="article__part">
                     <h3>Deployment tools</h3>
-                    <p>But that’s probably not what will immediately kick off a new wave of users. Audioboo plans to officially launch this with a number of high profile media partners “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta versions of the new platform that works with the plugin. A revamp of the Android version of the app will bring it up to par with the iPhone and have a similar plugin environment.</p>
+                    <p class="first_paragraph">But that’s probably not what will immediately kick off a new wave of users. Audioboo plans to officially launch this with a number of high profile media partners “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta versions of the new platform that works with the plugin. A revamp of the Android version of the app will bring it up to par with the iPhone and have a similar plugin environment.</p>
                     <div class="article__photo">
                         <img alt="Article big photo" src="assets/img/articleGeneralPhoto.png" />
                         <span>Image caption from alt.</span>
                     </div>
                     <p>
-                        To keep it simple, I’d recogher average scores or for deciding betmmend a total of four to five principles; but as with everything, tailor it to your own business. One effective method I have found is to set your principles in a spreadsheet, rank them, and then decide on a cut-off average for qualification. This is a great tool for identifying deals with highe average scores or for deciding between two potential deals. We’ve prepared an example of such a spreadsheet ber of high profile mdentifying deals with hiedia partners “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta 
+                            To keep it simple, I’d recogher average scores or for deciding betmmend a total of four to five principles; but as with everything, tailor it to your own business. One effective method I have found is to set your principles in a spreadsheet, rank them, and then decide on a cut-off average for qualification. This is a great tool for identifying deals with highe average scores or for deciding between two potential deals. We’ve prepared an example of such a spreadsheet ber of high profile mdentifying deals with hiedia partners “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta. To keep it simple, I’d recogher average scores or for deciding betmmend a total of four to five principles; but as with everything, tailor it to your own business. One effective method.
                         <img alt="Article small photo" src="assets/img/articleSmallPhoto.png" />
                         To keep it simple, I’d recogher average scores or for deciding betmmend a total of four to five principles; but as with everything, tailor it to your own business. One effective method I have found is to set your principles in a spreadsheet, rank them, and then decide on a cut-off average. <br /> <br /> This is a great tool for identifying deals with highe average scores or for deciding between two potential deals. We’ve prepared an example of such a spreadsheet ber of high profile mdentifying deals with hiedia partners “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta. A revamp of the Android version of the app will bring it up to par with the iPhone and have a similar plugin environment. Audoboo CEO and founder Mark Rock believes this will “fundamentally change the nature of how audio is captured and then distributed on the Internet.” Clearly this will give audioboo a lot of potential for scale compared to competitors like SoundCloud and Cinch who continue to rely on user-generated growth.
                     </p>
                 </div>
-                <div class="article__part">
+                <div class="article__part article__part--second">
                     <h3>Deployment tools</h3>
                     <p>
                         But that’s probably not what will immediately kick off a new wave of users. Audioboo plans to officially launch this with a number of high profile media partneraClearly this will give audioboo a lot of potential for scale compared to competitors like SoundCloud and Cinch who continue to rely on user-generated growth.
                     </p>
                     <p>
-                        But that’s probably not what will immediately kick off a new wave of users. Audioboo plans to officially launch this with a number of high profile media partneraClearly this will give audioboo a lot of potential for scale compared to competitors like SoundCloud and Cinch who continue to rely on user-generated growth.
+                            SoundCloud recently entered into the spoken word space, technically the “patch” of Audioboo. Audioboo was technically the first in 2009 to make voice “social” but it’s been joined by others like Broadcastr, Cinch and also iPadio, though iPadio is more enterprise focused. However, Soundcloud’s music focus has given it an impressive range of features in manipulating sound, while Audioboo has concentrated on dealing with broadcasters and media martners.s “in a couple of weeks” including the BBC, ABC Australia, Guardian, Aljazeera, Sky News and more all trialling the beta versions of the new platform that works with the plugin. A revamp of the Android version of the app will bring it up to par with the iPhone and have a similar plugin.
                     </p>    
                 </div>
             </article>
@@ -145,11 +157,13 @@
     <footer class="footer" role="contentinfo">
         <div class="clients__block">
             <h3>Our clients</h3>
-            <img alt="Creative Studio" src="assets/img/creative studio.png">
-            <img alt="Kreatif" src="assets/img/kreatif.png">
-            <img alt="Avstudio" src="assets/img/avstudio.png">
-            <img alt="GOFX" src="assets/img/gofx.png">
-            <img alt="Leaftech" src="assets/img/leaftech.png">
+            <ul>
+                <li><a><img alt="Creative Studio" src="assets/img/creative studio.png"></a></li>
+                <li><a><img alt="Kreatif" src="assets/img/kreatif.png"></a></li>
+                <li><a><img alt="Avstudio" src="assets/img/avstudio.png"></a></li>
+                <li><a><img alt="GOFX" src="assets/img/gofx.png"></a></li>
+                <li><a><img alt="Leaftech" src="assets/img/leaftech.png"></a></li>
+            </ul>
         </div>
 
         <div class="footer__container">
